--- a/test2/conf/nginx.conf
+++ b/test2/conf/nginx.conf
@@ -58,8 +58,8 @@ http {
 	# Virtual Host Configs
 	##
 
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+#	include /etc/nginx/conf.d/*.conf;
+#	include /etc/nginx/sites-enabled/*;
 
 
 
@@ -84,9 +84,9 @@ http {
 #	}
 #}
 server {
-    listen 82;
+    listen 80 default_server;
     index  index.html;
-    server_name localhost;
+#    server_name localhost;
     location / { 
 	root /home/abg/user2/test2/www;
     }
